# mirrordispatch

./: .gitmodules  CMakeLists.txt  Makefile  README.md
include/mirror/: dispatchsocket.h  job.h  module.h  publisher.h  scheduler.h  status.h  tests.h
lib/mirror_logging/include/mirror/: logger.h
lib/mirror_logging/src/: logger.cpp
src/: CMakeLists.txt  dispatchsocket.cpp  job.cpp  main.cpp  module.cpp  publisher.cpp  status.cpp  tests.cpp  tests.hpp
src/config/: config.cpp  config.h  config.hpp
src/io/: docker.cpp  docker.hpp  log.cpp  log.hpp
src/net/: DispatchSocket.cpp  DispatchSocket.h  publisher.cpp  publisher.h
src/scheduler/: job.cpp  job.h  job.hpp  module.cpp  module.h  module.hpp  scheduler.cpp  scheduler.h  scheduler.hpp  status.cpp  status.hpp
